ghost/admin/app/styles/layouts/post-preview.css
.gh-post-preview-modal {
    display: flex;
    flex-direction: column;
    height: 100%;
    background: var(--grey-75);
}

.gh-post-preview-header {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-shrink: 0;
    margin: 0;
    padding: 1.2rem 2rem;
    background: var(--grey-75);
}

.gh-post-preview-header .left {
    position: absolute;
    left: 20px;
    display: flex;
    align-items: center;
}

.gh-post-preview-header h2 {
    margin: 0;
    font-size: 2rem;
}

.gh-post-preview-header .right {
    position: absolute;
    right: 20px;
    display: flex;
    align-items: center;
    gap: 8px;
}

.gh-post-preview-header .gh-btn-editor {
    background: none;
}

.gh-post-preview-header .gh-btn-editor:hover {
    background: var(--whitegrey);
}

.gh-post-preview-btn-group {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 8px;
}

@media (max-width: 960px) {
    .gh-post-preview-header {
        justify-content: flex-start;
    }

    .gh-post-preview-btn-group {
        margin-left: 9rem;
    }
}

.gh-post-preview-btn-group .gh-btn-group {
    gap: .2rem;
    margin: 0 4px;
    background: transparent;
}

.gh-post-preview-btn-group .gh-btn-group span {
    height: 34px;
    padding: 0 10px;
    line-height: 34px;
    background: none !important;
    box-shadow: none;
}

.gh-post-preview-btn-group .gh-btn-group span:hover {
    background: var(--whitegrey) !important;
}

.gh-post-preview-btn-group .gh-btn {
    margin: 0;
}

.gh-web-preview-segment {
    height: 34px;
    margin: 0 4px;
    background: transparent;
}

.gh-preview-segment-dropdown.ember-power-select-dropdown.ember-basic-dropdown-content--below {
    min-width: 200px;
    margin: 2px 0 0;
    padding: 4px 0;
    border: none;
    border-radius: 3px;
    box-shadow: 0 0 0 1px rgba(0,0,0,.04),0 8px 20px -3px rgba(0,0,0,.2);
}

.gh-preview-segment-dropdown .ember-power-select-options li.ember-power-select-option {
    width: calc(100% - 8px);
    margin: 0 4px;
    padding: 7px 10px;
    color: var(--darkgrey);
    font-size: 1.3rem;
    font-weight: 500;
    line-height: 1.4;
    border-radius: 6px;
}

.gh-web-preview-segment .gh-preview-segment-trigger {
    height: 34px;
    padding: 0 28px 0 14px;
    background: transparent;
    border: none;
    color: var(--black);
    font-size: 1.3rem;
    font-weight: 500;
    line-height: 34px;
    border-radius: 5px;
}

@media (max-width: 640px) {
    .gh-web-preview-segment .gh-preview-segment-trigger {
        display: none;
    }
}

.gh-web-preview-segment:hover .gh-preview-segment-trigger {
    background: var(--whitegrey);
}

.gh-web-preview-segment .ember-basic-dropdown-trigger--below.ember-power-select-trigger[aria-expanded=true] {
    background: var(--whitegrey);
}

.gh-select.gh-web-preview-segment .gh-preview-segment-trigger svg {
    height: 5px;
    margin-top: -.1em;
}

.gh-select.gh-web-preview-segment svg path {
    stroke-width: 4px;
    stroke: var(--black);
}

.gh-post-preview-mode svg {
    height: 18px;
    width: 18px;
    vertical-align: middle;
    color: var(--midgrey);
}

/* Preview animation */

.gh-post-preview-container {
    opacity: 1;
}

.gh-post-preview-container.fade-in {
    transform-origin: center;
    animation: fade-in-pulse .35s forwards cubic-bezier(.8,.02,.45,.91);
}
.epm-out .gh-post-preview-container.fade-in {
    transform-origin: center;
    animation: fade-out-pulse .35s forwards cubic-bezier(.8,.02,.45,.91);
}


/* Browser preview */

.gh-post-preview-browser-container {
    z-index: 999;
    display: flex;
    flex-direction: column;
    height: 100%;
    margin: 0 .8rem;
    border-radius: 8px 8px 0 0;
    box-shadow: var(--shadow-1);
}

.gh-post-preview-browser-container .gh-pe-iframe {
    width: 100%;
    height: 100%;
    border: none;
}

.gh-post-preview-browser-container .tabs div {
    width: 360px;
    color: var(--middarkgrey);
    font-weight: 400;
}

.gh-post-preview-email:not(.gh-pe-mobile-bezel) {
    display: flex;
    justify-content: center;
    width: 100%;
    height: 100%;
}

.gh-post-preview-url,
.gh-post-preview-email-trigger {
    display: flex;
    align-items: center;
    flex-shrink: 0;
    height: 34px;
    border: none;
    color: var(--darkgrey);
    font-size: 1.25rem;
    font-weight: 500;
    letter-spacing: .2px;
}

.gh-post-preview-url span,
.gh-post-preview-email-trigger span {
    padding: 0 10px;
}

.gh-post-preview-url:hover,
.gh-post-preview-email-trigger:hover {
    background: var(--whitegrey);
}

.gh-post-preview-email-trigger.open {
    background: var(--whitegrey);
}

.gh-post-preview-url svg {
    width: 18px;
    height: 18px;
    margin-bottom: 3px;
}

.gh-post-preview-email-trigger svg {
    width: 18px;
    height: 18px;
    margin-bottom: 1px;
}

.gh-post-preview-url .check {
    width: 14px;
    margin-top: -1px;
}

.gh-post-preview-url .check path {
    stroke-width: 2.4px;
    stroke: var(--green-d1);
}

.gh-post-preview-url-container {
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    height: 38px;
    max-width: 520px;
    padding: 5px 4px 5px 8px;
    color: var(--midgrey);
    font-size: 1.4rem;
    border: 1px solid var(--whitegrey);
    background: var(--whitegrey-l2);
    border-radius: 4px;
}

.gh-post-preview-share {
    display: flex;
    flex-direction: column;
}

.gh-btn.gh-post-copy-url,
.gh-publish-preview-newtab {
    width: calc(100% - 8px);
    margin: 0 4px;
    border: none;
    color: var(--darkgrey);
    font-size: 1.3rem;
    font-weight: 500;
    line-height: 1.4;
    border-radius: 6px;
}

.gh-btn.gh-post-copy-url span,
.gh-publish-preview-newtab span {
    display: flex;
    align-items: center;
    justify-content: flex-start;
}

.gh-post-copy-url svg {
    margin-right: .6rem;
    fill: none;
}
/* ... */

